[package]
name = "russted"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "*"
url_serde = "*"
serde = { version = "*", features = ["derive"] }
serde_with = { version = "*" }
chrono = { version = "*", features = ["serde"] }